# OpenCL

./: README.md
matrix_mult/: CMakeLists.txt  main.cpp  matrix_mult_per_thread.cl
prefix_sum/: CMakeLists.txt  main.cpp  prefix_sum.cl
